--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       type="text/babel"
       data-type="module"
       data-presets="typescript,react"
-      src="./index.tsx">
+      src="./main.tsx">
     </script>
   </body>
 </html>
