--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
 </head>
   <body class="bg-light">
     <div id="root"></div>
-    <script type="module" src="/main.tsx"></script>
+    <script type="module" src="./main.tsx"></script>
   </body>
 </html>
